Case #4031 - Fixed overflow issue in Chrome

--- a/assets/sass/partials/_page.scss
+++ b/assets/sass/partials/_page.scss
@@ -33,6 +33,7 @@ body {
 
 a {
 	color: $p-main;
+	word-wrap: break-word;
 
 	&:hover {
 		color: darken($p-main, 10%);
